<resources>
    <string name="delete">Supprimer</string>
    <string name="save">Sauvegarder</string>
    <string name="add">Ajouter</string>

    <string name="app_name">ConsoMaitre</string>
    <string name="settings">Paramètres</string>
    <string name="my_vehicules">Mes véhicules</string>
    <string name="edit_plein">Modifier le plein</string>
    <string name="quantite">Quantité</string>
    <string name="kilometrage">Kilometrage</string>
    <string name="price_unit">Prix au litre</string>
    <string name="name">Nom</string>

    <string name="unite_distance">km</string>
    <string name="per_month">Par mois</string>
    <string name="average">Moyenne</string>
    <string name="unit_conso">l/100km</string>
</resources>